--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,5 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,linux,visualstudiocode
+prototype_libero_model_12.pth
+Untitled.ipynb
